--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <title>index</title>
 <meta name="author" content="(Anand Reddy Pandikunta)"/>
 
-<link rel="stylesheet" href="file:///home/anand/.emacs.d/vendor/reveal.js/css/reveal.css"/>
-<link rel="stylesheet" href="file:///home/anand/.emacs.d/vendor/reveal.js/css/theme/simple.css" id="theme"/>
+<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/2.5.0/css/reveal.min.css"/>
+<link rel="stylesheet" href="http://cdn.jsdelivr.net/reveal.js/2.5.0/css/theme/simple.css" id="theme"/>
+
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
