--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <title>index</title>
 <meta name="author" content="(Anand Reddy Pandikunta)"/>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/reveal.js/2.5.0/css/reveal.css"/>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/reveal.js/2.5.0/css/theme/simple.css" id="theme"/>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/reveal.js/2.5.0/css/reveal.css"/>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/reveal.js/2.5.0/css/theme/simple.css" id="theme"/>
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
