--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@ ptipython
 </div>
 </div>
 
-<script src="http://cdn.jsdelivr.net/reveal.js/2.5.0/lib/js/head.min.js"></script>
-<script src="http://cdn.jsdelivr.net/reveal.js/2.5.0/js/reveal.js"></script>
+<script src="https://cdn.jsdelivr.net/reveal.js/2.5.0/lib/js/head.min.js"></script>
+<script src="https://cdn.jsdelivr.net/reveal.js/2.5.0/js/reveal.js"></script>
 
 <script>
 // Full list of configuration options available here:
